--- a/src/01-gallery.html
+++ b/src/01-gallery.html
@@ -15,5 +15,7 @@
     <div class="gallery"></div>
 
     <script src="js/01-gallery.js"></script>
+	 <script type="module"></script>
+
   </body>
 </html>
