--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/common.css" />
   </head>
   <body>
-	  <h1>Перевірка серверу</h1>
+	  <h1>TEST TERMINAL B</h1>
     <ul>
       <li><a href="01-gallery.html">Image gallery</a></li>
       <li><a href="02-video.html">Video playback</a></li>
